<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome_message"
        />

    <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />

    <EditText
        style="@style/RoundedEditText"
        android:hint="@string/name_ph"
            android:id="@+id/edit_text_name"
            android:autofillHints="name"
            android:inputType="text" />

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname" />

        <EditText
            style="@style/RoundedEditText"
            android:hint="@string/firstname_ph"
            android:id="@+id/edit_text_firstname"
            android:inputType="text"
            android:autofillHints="name"
            />

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            />

        <EditText
            style="@style/RoundedEditText"
            android:hint="@string/age_ph"
            android:id="@+id/edit_text_age"
            android:inputType="number"
            />

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_of_expertise"
            />

    <Spinner
        android:id="@+id/spinner_expertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext_rounded"
        android:layout_margin="8dp"
        android:elevation="4dp" />

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/country_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_rounded"
            android:layout_margin="8dp"
            android:elevation="4dp" />
        <EditText
            style="@style/RoundedEditText"
            android:id="@+id/edit_text_phone_number"
            android:inputType="phone"
            android:autofillHints="phone"
            />

    </LinearLayout>

        <Button
            style="@style/Text"
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/missing_fields"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="8dp" />

</LinearLayout>


